- add `utils.raster_get_stats` and `utils._get_stats` to replace `min_max*` function
and to return more statistics (#66)
- add overview level selection to statistical functions to reduce the data download (#59)
- add pure GDAL `array_to_image` function to replace PIL tools (#29)
- add GDAL format output from `utils.get_colormap` to be used in `array_to_image` (#29)


**Breacking Changes**
- update `metadata` structure returned by `landsat8.metadata`, `sentinel2.metadata`, `cbers.metadata`
- force sentinel, landsat and cbers band names to be string and add validation (#65)


1.0rc2 (2018-08-22)
-------------------
- add test case for pix4d nodata+alpha band data

1.0rc1 (2018-07-16)
-------------------
- rasterio 1.0.0

1.0b3 (2018-07-02)
------------------
- add schwarzwald color palette

1.0b2 (2018-06-26)
------------------
- fix nodata (#48)

1.0b1 (2018-06-23)
------------------
- adapt to rasterio 1.0b4
- fix mask (internal/external) fetching 🙏
- fix boundless read with new rasterio 1.0b2
- fix custom nodata handling
- fix performances issue

:Breacking Changes:
- removed alpha band options to select a custom alpha band number

1.0a8 (2018-06-20)
------------------
- Fix rasterio version to 1.0b1 (#46 and #44)

1.0a7 (2018-05-14)
------------------
- Support for additional CBERS instruments (fredliporace)

1.0a6 (2018-03-29)
------------------
- Fixes sentinel-2 band 8A regex bug in `rio_tiler.utils.expression`

1.0a5 (2018-03-26)
------------------
- adds DatasetReader input option for utils.tile_read (do not close the dataset on each read)

:Breacking Changes:
- `utils.tile_band_worker` renamed to `utils.tile_read`
- `main.tile` **rgb** option renamed **indexes**
- `sentinel2.tile`, `landsat8.tile`,  `cbers.tile` **rgb** option renamed **bands**
- `main.tile` default nodata mask is handled by rasterio

1.0a4 (2018-03-07)
------------------
- adds utils.b64_encode_img function to encode an image object into a base64 string