@@ -10,6 +10,7 @@ and to return more statistics (#66)
 - add overview level selection to statistical functions to reduce the data download (#59)
 - add pure GDAL `array_to_image` function to replace PIL tools (#29)
 - add GDAL format output from `utils.get_colormap` to be used in `array_to_image` (#29)
+- add GDAL compatible Image creation profile (#29)
 
 
 **Breacking Changes**
